# DWS-Linux

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  dws_tray.desktop.in  main.c
